# metaquery_actuary

./: .gitignore  LICENSE  README.md  SPED.md  audit.json  explain.txt  pyproject.toml  query.sql
examples/: README.md  fields.yml  selection_ok.yml  selection_reject.yml
src/metaquery/: Untitled  __init__.py  cli.py  loader.py  validator.py
tests/: test_validator.py
